@@ -13,7 +13,7 @@ loglevel=debug
 device=/dev/ttyUSB0:t1
 logtelegrams=true
 format=json
-meterfiles=/var/log/wmbusmeters/meter_readings
+meterfiles=/var/lib/wmbusmeters/meter_readings
 meterfilesaction=overwrite
 meterfilesnaming=name-id
 logfile=/var/log/wmbusmeters/wmbusmeters.log
